--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ url: https://y7kim.github.io
 baseurl: /itcv/
 
 # Site settings
-title: Awesome Title
+title: ISKCON Tri-Center valley
 email: om@surabhi.org
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
